# ruxnasm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: ci.yml  release.yml
docs/: differences.md
examples/: helloworld.tal  helloworld.usm
src/: anomalies.rs  argument_parser.rs  emitter.rs  error.rs  instruction.rs  lib.rs  main.rs  scanner.rs  span.rs  token.rs  traits.rs  walker.rs
src/argument_parser/: error.rs  mod.rs
src/emitter/: anomalies.rs  mod.rs
src/reader/: error.rs  mod.rs
src/reporter/: diagnostic.rs  display.rs  mod.rs
src/scanner/: anomalies.rs  mod.rs
src/tokenizer/: anomalies.rs  error.rs  hex_number.rs  mod.rs  parsers.rs  symbols.rs
src/walker/: anomalies.rs  mod.rs
src/writer/: error.rs  mod.rs
tests/: integration.rs
tests/generator/: Cargo.toml
tests/generator/src/: lib.rs  test.rs  tests.rs  tests_mod.rs  utils.rs
