[package]
name = "ruxnasm"
version = "0.1.1"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"
description = "Alternative Uxntal assembler focused on error reporting"
readme = "README.md"
repository = "https://github.com/karolbelina/ruxnasm"
license = "MIT"
keywords = ["assembler", "uxn", "uxntal"]
categories = ["command-line-utilities", "compilers"]
exclude = [".github", ".vscode"]

[[bin]]
name = "ruxnasm"
required-features = ["codespan-reporting"]

[features]
default = ["codespan-reporting"]

[dependencies]
codespan-reporting = { version = "0.11.1", optional = true }

[dev-dependencies]
test-case = "1.1.0"
