[package]
name = "ruxnasm"
version = "0.2.0"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"
description = "Alternative Uxntal assembler focused on error reporting"
readme = "README.md"
repository = "https://github.com/karolbelina/ruxnasm"
license = "MIT"
keywords = ["assembler", "uxn", "uxntal"]
categories = ["command-line-utilities", "compilers"]
exclude = [".github", ".vscode", "docs"]

[workspace]
members = ["tests/generator"]

[[bin]]
name = "ruxnasm"
required-features = ["bin"]

[features]
default = ["bin"]
# Feature required for the Ruxnasm binary. Should be disabled when depending on
# Ruxnasm as a library.
bin = ["codespan-reporting"]

[dependencies]
codespan-reporting = { version = "0.11.1", optional = true }

[dev-dependencies]
diff_assert = { git = "https://github.com/anixe/diff-assert.git", branch = "master" }
generator = { path = "tests/generator" }
pretty-hex = "0.2.1"
test-case = "1.1.0"
